# Bias-Adaptive-Fair-Loan-Approval-System

./: .gitignore  LICENSE  README.md  convert_german.py  pyproject.toml  requirements.txt  streamlit_app.py
configs/: data.yaml  fairness.yaml  model.yaml  training.yaml
data/metadata/: dataset_schemas.yaml
experiments/: ablation_alpha.py  ablation_alpha_controller.py  ablation_method_comparison.py  compare_baselines.py  generate_final_results_table.py  plot_controller_convergence.py  plot_controller_dynamics.py  plot_fairness_accuracy_tradeoff.py  plot_phase8_results.py  run_adaptive_controller.py  run_adaptive_fairness.py  run_adaptive_multi_metric.py  run_all_methods_summary.py  run_baseline.py  run_explainability.py  run_fairlearn_reductions.py  run_intersectional_fairness.py  run_lightgbm_threshold_analysis.py  run_static_fairness.py  run_statistical_evaluation.py  stability_analysis.py
results/analysis/: controller_dynamics_dp.csv  controller_dynamics_eod.csv  controller_dynamics_eop.csv
results/statistics/: statistical_summary.csv
results/tables/: ablation_alpha.csv  ablation_alpha_controller.csv  ablation_method_comparison.csv  adaptive_multi_metric_results.csv  adult_adaptive_metrics.csv  adult_baseline_metrics.csv  adult_fairlearn_metrics.csv  adult_lightgbm_pareto_validation.csv  adult_lightgbm_threshold_final.csv  adult_lightgbm_validation_curve.csv  adult_static_metrics.csv  baseline_vs_static.csv  controller_training_log.csv  counterfactual_examples_german.csv  final_combined_results.csv  (+25 more)
tests/: test_data_pipeline.py  test_fairness_metrics.py
(+16 files in other folders)
